Closed Bug 1655266 Opened 5 years ago Closed 5 years ago

[Linux] Firefox is not moved to workspaces after restart on Gnome shell with static workspace setup

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox78 --- unaffected
firefox79 --- unaffected
firefox80 --- fixed
firefox81 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This is a minor regression from Bug 1645776. Firefox is not moved to workspaces after browser restart on Gnome shell with non-default static workspace setup.

Pushed by btara@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7134225dde7d [Linux] Remove shadowed local variable 'usesDynamicWorkspaces' to correctly return worspace setup, r=rmader
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch

Is this something we should consider for Beta uplift? Please nominate if so.

Flags: needinfo?(stransky)

Comment on attachment 9166077 [details]
Bug 1655266 [Linux] Remove shadowed local variable 'usesDynamicWorkspaces' to correctly return worspace setup, r?rmader

Beta/Release Uplift Approval Request

  • User impact if declined: Users with fixed workspace setup on Gnone won't get restored Firefox windows on particular workspaces but all Firefox will be resotred at first workspace.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The fix removes unused local variable which shadowed an actual one, as it was before.
  • String changes made/needed:
Flags: needinfo?(stransky)
Attachment #9166077 - Flags: approval-mozilla-beta?

Comment on attachment 9166077 [details]
Bug 1655266 [Linux] Remove shadowed local variable 'usesDynamicWorkspaces' to correctly return worspace setup, r?rmader

approved for 80.0b6

Attachment #9166077 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: