Bug 1655266 [Linux] Remove shadowed local variable 'usesDynamicWorkspaces' to correctly return worspace setup, r=rmader

Differential Revision: https://phabricator.services.mozilla.com/D84907